* test/ruby/test_exception.rb   (TestException#test_thread_signal_location):   change test method name.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26446 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Jan 27 23:20:52 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+
+	* test/ruby/test_exception.rb
+	  (TestException#test_thread_signal_location):
+	  change test method name.
+
 Wed Jan 27 22:48:40 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* lib/matrix.rb (determinant): fix name error.
