--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan 27 23:29:36 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* lib/thread.rb (ConditionVariable#wait, signal, broadcast): return
+	  self (for 1.8 compatibility).
+
 Wed Jan 27 23:27:54 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* lib/matrix.rb: add exception Matrix::ErrOperationNotImplemented
