* test/matrix/test_matrix.rb, test/matrix/test_vector.rb: add some   tests.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26450 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan 27 23:33:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* test/matrix/test_matrix.rb, test/matrix/test_vector.rb: add some
+	  tests.
+
 Wed Jan 27 23:29:36 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* lib/thread.rb (ConditionVariable#wait, signal, broadcast): return
