--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Wed Jan 27 22:16:00 2010 Kirk Haines <khaines@ruby-lang.org>
 
-	* io.c: Backport #1818 [ruby-core:24561]; (argf_eof): go to the next file if called after ARGF.close or ARGF.skip. 
+	* re.h: Backport #1875 [ruby-core:24735]; (RMATCH_REGS): added for compatibility.
+	  ruby.h: (RFLOAT_VALUE, RSTRING_END, RREGEXP_SRC_*, RBIGNUM_*): backported macros for compatiblity from trunk.
+
+	* io.c: Backport #1818 [ruby-core:24561]; (argf_eof): go to the next file if called after ARGF.close or ARGF.skip. r26451
 
 	* lib/rexml/text.rb: Backport #1806 [ruby-core:24506]; (REXML::Text.normalize): call to_s for input. r26442
 
