--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@ Wed Jan 27 23:22:54 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 	* vm_dump.c (bugreport_backtrace): trivial change.
 
 	* vm_dump.c (rb_vm_bugreport): uninitialized local variable i.
+	  [ruby-dev:40169]
 
 	* test/ruby/test_rubyoptions.rb (TestRubyOptions#test_segv_test):
 	  follow above change.
