* lib/cgi.rb: set autoload to CGI::HtmlExtension.  [ruby-dev:40194]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26459 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jan 29 00:18:54 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* lib/cgi.rb: set autoload to CGI::HtmlExtension.  [ruby-dev:40194]
+
 Thu Jan 28 09:44:19 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* regcomp.c (onig_compile): initialize ScanEnv.
