--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Fri Jan 29 11:09:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (try_do): log no source when no developement env.
+
+	* lib/mkmf.rb (create_makefile): srcprefix always needs $(srcdir).
+
+	* lib/mkmf.rb (create_makefile): yield configuration if a block is
+	  given.
+
 Fri Jan 29 09:43:30 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* enc/trans/utf8_mac.trans (buf_shift_char): don't see uninitialised
