* configure.in (mingw): needs $(DEFFILE) for extension libraries.   [ruby-core:27946]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26467 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jan 29 12:59:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* configure.in (mingw): needs $(DEFFILE) for extension libraries.
+	  [ruby-core:27946]
+
 Fri Jan 29 11:09:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (try_do): log no source when no developement env.
