merges r25266 from trunk into ruby_1_9_1. -- * compile.c (ADD_TRACE): fire coverage event in ensure clause.   [ruby-dev:39303]
* iseq.h, iseq.c: ditto.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26476 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Oct  9 01:07:34 2009  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* compile.c (ADD_TRACE): fire coverage event in ensure clause.
+	  [ruby-dev:39303]
+
+	* iseq.h, iseq.c: ditto.
+
 Fri Oct  9 00:33:29 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* lib/net/telnet.rb (cmd): Pass FailEOF options: patch by Brian
