merges r25290 from trunk into ruby_1_9_1. -- * file.c (path_check_0): prevent from GC.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26478 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct 10 23:57:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (path_check_0): prevent from GC.
+
 Fri Oct  9 02:12:02 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* ext/curses/curses.c: Many functions of module Curses could cause a
