merges r25294 from trunk into ruby_1_9_1. -- * include/ruby/ruby.h (RB_GC_GUARD_PTR): workaround for gcc   optimization.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26479 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun Oct 11 09:04:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/ruby.h (RB_GC_GUARD_PTR): workaround for gcc
+	  optimization.
+
+	* include/ruby/ruby.h (ruby_exec_node): declared.
+
 Sat Oct 10 23:57:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* file.c (path_check_0): prevent from GC.
