merges r25297 from trunk into ruby_1_9_1. and another fix for [ruby-core:26047]. -- * lib/irb/context.rb (IRB::Context#irb_name): removed duplicated   attr_reader.  [ruby-core:26047]
* lib/irb/ruby-lex.rb (RubyLex#lex_int2): removed duplicated
  character class range.
--
* lib/irb/extend-command.rb (IRB::def_extend_command): [ruby-core:26047]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26480 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sun Oct 11 10:27:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/irb/context.rb (IRB::Context#irb_name): removed duplicated
+	  attr_reader.  [ruby-core:26047]
+
+	* lib/irb/ruby-lex.rb (RubyLex#lex_int2): removed duplicated
+	  character class range.
+
 Sun Oct 11 09:04:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/ruby.h (RB_GC_GUARD_PTR): workaround for gcc
