--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Oct 11 15:54:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/gdbm/gdbm.c (fgdbm_select): fixed rdoc.  a patch from Justin
+	  Collins in [ruby-core:26050].
+
 Sun Oct 11 10:27:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/irb/context.rb (IRB::Context#irb_name): removed duplicated
