merges r25320 from trunk into ruby_1_9_1. -- * ext/tk/variable.rb: bug fix. additional trace definition changes the   option of first trace definition.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26484 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Oct 13 18:54:25 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/variable.rb: bug fix. additional trace definition changes the
+	  option of first trace definition.
+
 Tue Oct 13 18:20:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (parser_magic_comment): fixed normalization.
