--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Thu Oct 15 09:25:07 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+ * ext/socket/init.c (rsock_init_sock): mswin doesn't have S_IFSOCK
+   flag in st_mode of struct stat. so, use rb_w32_issocket() function
+   instead of S_ISSOCK macro.
+
+Thu Oct 15 00:26:07 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/init.c (rsock_init_sock): validate file descriptor.
+
 Tue Oct 13 18:54:25 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/variable.rb: bug fix. additional trace definition changes the
