--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Oct 15 14:20:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/iconv/iconv.c (iconv_create): cannot retry with given block.
+	  [ruby-dev:39487]
+
 Thu Oct 15 09:25:07 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
  * ext/socket/init.c (rsock_init_sock): mswin doesn't have S_IFSOCK
