merges r25388 from trunk into ruby_1_9_1. --
* test/test_prime.rb
  (TestPrime#test_eratosthenes_works_fine_after_timeout):
  test for [ruby-dev:39465].

* lib/prime.rb (Prime::EratosthenesSieve):
  fixed [ruby-dev:39465].
  suppressed memory reallocation.
  constantified some magic numbers.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26491 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Sun Oct 18 09:49:14 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
+
+	* test/test_prime.rb
+	  (TestPrime#test_eratosthenes_works_fine_after_timeout):
+	  test for [ruby-dev:39465].
+
+	* lib/prime.rb (Prime::EratosthenesSieve):
+	  fixed [ruby-dev:39465].
+	  suppressed memory reallocation.
+	  constantified some magic numbers.
+
 Fri Oct 17 00:05:53 2009  wanabe  <s.wanabe@gmail.com>
 
 	* st.c (unpack_entries): save table->bins and never change the table
