* vm_method.c (rb_alias): treats an alias as if it is a newly defined   method so that oklass in a method cache refers the class on which the   aliasing occured.   [ruby-core:26074] (#2202).
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26495 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Jan 30 18:09:36 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
+
+	* vm_method.c (rb_alias): treats an alias as if it is a newly defined
+	  method so that oklass in a method cache refers the class on which the 
+	  aliasing occured.
+	  [ruby-core:26074] (#2202).
+
 Sat Jan 30 17:58:28 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* .gdbinit: follows r24470.
