merges r25402,r25404,r25405,r25406 and r25407 from trunk into ruby_1_9_1. -- * parse.y (parser_here_document): dispatch delayed heredoc   contents.  based on a patch from Andy Keep in [ruby-core:24855]. -- * parse.y (mlhs_basic): fixed handling splat in middle of mlhs.  a   patch from Andy Keep in [ruby-core:26163] -- * parse.y (method_call): dispatch symbols.  a patch from Andy Keep in   [ruby-core:26169].  [ruby-core:26165] -- * test/ripper/test_*.rb: fixed indent. -- * parse.y (ripper_intern): enable literal optimization.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26496 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Tue Oct 20 15:38:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (ripper_intern): enable literal optimization.
+
+	* parse.y (method_call): dispatch symbols.  a patch from Andy Keep in
+	  [ruby-core:26169].  [ruby-core:26165]
+
+	* parse.y (mlhs_basic): fixed handling splat in middle of mlhs.  a
+	  patch from Andy Keep in [ruby-core:26163]
+
+	* parse.y (parser_here_document): dispatch delayed heredoc
+	  contents.  based on a patch from Andy Keep in [ruby-core:24855].
+
 Sat Jan 30 18:09:36 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* vm_method.c (rb_alias): treats an alias as if it is a newly defined
