--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Oct 20 16:41:18 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* include/ruby/win32.h (finite, scalb): inline'ed non-standard
+	  identifier macros.  [ruby-core:2234]
+
 Tue Oct 20 15:38:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (ripper_intern): enable literal optimization.
