--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sun Oct 25 13:33:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (io_cntl): F_DUPFD is platform dependent.
+
+Sat Oct 24 00:36:47 2009  Tanaka Akira  <akr@fsij.org>
+
+	* io.c (io_cntl): update max file descriptor by the result of
+	  fcntl(F_DUPFD).
+
 Fri Oct 23 09:12:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/pathname.rb (Pathname::SAME_PATHS): FNM_SYSCASE is always
