merges r25494 from trunk into ruby_1_9_1. adds a test case for the change -- * vm.c (invoke_block_from_c): return Qnil when its iseq is   SPECIAL CONST. [ruby-core:26335]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26506 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Oct 27 05:56:39 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* vm.c (invoke_block_from_c): return Qnil when its iseq is
+	  SPECIAL CONST. [ruby-core:26335]
+
 Mon Oct 26 12:06:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (io_fwrite): adjust stdio file position after direct write on
