--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Oct 27 07:53:25 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* gc.c (garbage_collect_with_gvl): do not garbage_collect when
+	  dont_gc flag turned on.  [ruby-core:26327]
+
 Tue Oct 27 05:56:39 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* vm.c (invoke_block_from_c): return Qnil when its iseq is
