--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Oct 27 15:44:48 2009  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/ftp.rb (getbinaryfile, list): call to_s to convert
+	  a Pathname instance into a string.  [ruby-core:26237]
+
 Tue Oct 27 07:53:25 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* gc.c (garbage_collect_with_gvl): do not garbage_collect when
