--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,38 @@
+Thu Oct 29 04:41:44 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ruby.c (process_options): call rb_filesystem_encoding().
+
+Wed Oct 28 16:32:49 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* encoding.c (get_filesystem_encoding): removed.
+
+	* encoding.c (rb_locale_encindex): added.
+
+	* encoding.c (rb_filesystem_encindex): added.
+
+	* encoding.c (rb_filesystem_encindex): add an alias 'filesystem'.
+	  [ruby-dev:39574]
+
+	* encoding.c (enc_find): add rdoc about special aliases.
+
+	* gem_prelude.rb (Gem.set_home): use Encoding.find('filesystem').
+
+	* gem_prelude.rb (Gem.set_paths): ditto.
+
+Wed Oct 28 15:02:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* gem_prelude.rb (Gem.set_home):
+	  force_encoding(Encoding.filesystem_encoding)
+	  [ruby-core:25959]
+
+	* gem_prelude.rb (Gem.set_paths): ditto.
+
+Wed Oct 28 14:24:45 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* encoding.c (get_filesystem_encoding):
+	  add Encoding.filesystem_encoding [ruby-dev:39546]
+	  also see [ruby-core:25959]
+
 Tue Oct 27 15:44:48 2009  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* lib/net/ftp.rb (getbinaryfile, list): call to_s to convert
