--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Sat Oct 31 17:19:28 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
+
+	* lib/net/http.rb (Net::HTTPResponse#each_response_header):
+	  cosmetic: '?\ ' -> '?\s'
+
+Fri Oct 30 22:09:47 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
+
+	* lib/net/http.rb (Net::HTTPResponse#each_response_header):
+	  accept multiline message header of HTTP response.  see #1796.
+	  cf. RFC 2616 '4.2 Message Header'.  
+
+	* test/net/http/test_httpresponse.rb: added.
+
 Thu Oct 29 04:41:44 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ruby.c (process_options): call rb_filesystem_encoding().
