* lib/rexml/parent.rb (REXML::Parent#delete): return the deleted node   because the rdoc of REXML::Element#delete_element says it returns   "the element that was removed."
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26517 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
+Sun Jan 31 15:46:37 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* lib/rexml/parent.rb (REXML::Parent#delete): return the deleted node
+	  because the rdoc of REXML::Element#delete_element says it returns
+	  "the element that was removed."
+
 Sun Jan 31 14:33:00 2010  James Edward Gray II  <jeg2@ruby-lang.org>
 
-  * A bug fix for deleting blank Table rows from Andy Hartford.
+	* lib/csv.rb: A bug fix for deleting blank Table rows from Andy Hartford.
 
 Sun Jan 31 13:31:43 2010  wanabe  <s.wanabe@gmail.com>
 
