* vm_insnhelper.c (vm_throw): fixed infinite loop.  [ruby-core:27969]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26522 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jan 31 21:10:15 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* vm_insnhelper.c (vm_throw): fixed infinite loop.  [ruby-core:27969]
+
 Sun Jan 31 15:50:34 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* lib/rexml/text.rb (REXML::Text#initialize): fix typo and a bug that
