--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jan 31 22:41:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* string.c (rb_string_value): fix the previous commit.
+
 Sun Jan 31 21:43:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* string.c (rb_string_value): make no exception for Symbol.
