--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jan 31 23:07:23 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* test/ruby/test_dir.rb: use string instead of symbol as file name.
+
 Sun Jan 31 22:41:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* string.c (rb_string_value): fix the previous commit.
