--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jan 31 23:20:43 2010  wanabe  <s.wanabe@gmail.com>
+
+	* io.c (rb_io_each_codepoint): use cbuf when needs readconv.
+
 Sun Jan 31 23:07:23 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* test/ruby/test_dir.rb: use string instead of symbol as file name.
