* ext/tk/tkutil/tkutil.c: fix SEGV on TkUtil::CallbackSubst._setup_subst_table. * ext/tk/lib/tk.rb: [ruby1.9] fix freeze at exit. * ext/tk/lib/tk.rb: [POTENTIAL INCOMPATIBLE] return NoMethodError   for TkWindow#to_ary and to_str. * ext/tk/lib/tkextlib/tcllib/plotchart.rb: wrong arguments. * ext/tk/sampel/tkballoonhelp.rb: fail to support TkEntry widgets.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26530 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Mon Feb  1 07:36:33 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/tkutil/tkutil.c: fix SEGV on TkUtil::CallbackSubst._setup_subst_table.
+
+	* ext/tk/lib/tk.rb: [ruby1.9] fix freeze at exit.
+
+	* ext/tk/lib/tk.rb: [POTENTIAL INCOMPATIBLE] return NoMethodError
+	  for TkWindow#to_ary and to_str.
+
+	* ext/tk/lib/tkextlib/tcllib/plotchart.rb: wrong arguments.
+
+	* ext/tk/sampel/tkballoonhelp.rb: fail to support TkEntry widgets.
+
 Sun Jan 31 23:20:43 2010  wanabe  <s.wanabe@gmail.com>
 
 	* io.c (rb_io_each_codepoint): use cbuf when needs readconv.
