* lib/delegate.rb (Delegator#marshal_dump): exclude   delegator-specific instance variables.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26539 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Feb  2 11:13:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/delegate.rb (Delegator#marshal_dump): exclude
+	  delegator-specific instance variables.
+
 Mon Feb  1 21:26:41 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* lib/matrix.rb (Vector#each2): returns a self.  [ruby-dev:40241]
